--- a/_config.yml
+++ b/_config.yml
@@ -8,16 +8,12 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : simple site
+title : Self-Driving Cart
 author :
-  name : Karl Broman
-  email : kbroman@gmail.com
-  github : kbroman
-  twitter : kwbroman
-  feedburner : nil
+  name : John Doe
 
 # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-production_url : http://kbroman.github.io/simple_site
+production_url : https://v1shaner.github.io/self-driving-cart
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
@@ -52,7 +48,7 @@ JB :
   #     This means always setting the protocol (http|https) or prefixing with "/"
   #
   # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-  BASE_PATH : http://kbroman.org/simple_site
+  BASE_PATH : https://v1shaner.github.io/self-driving-cart
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
