ideally this will fix this

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author :
   name : John Doe
 
 # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-production_url : https://v1shaner.github.io/self-driving-cart
+production_url : https://v1shanker.github.io/self-driving-cart
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
@@ -48,7 +48,7 @@ JB :
   #     This means always setting the protocol (http|https) or prefixing with "/"
   #
   # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-  BASE_PATH : https://v1shaner.github.io/self-driving-cart
+  BASE_PATH : https://v1shanker.github.io/self-driving-cart
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
