--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,6 +1,10 @@
+*.iml
 .gradle
 /local.properties
+/.idea/libraries
+/.idea/modules.xml
 /.idea/workspace.xml
-/build
 .DS_Store
-*.iml
+/build
+/captures
+.externalNativeBuild
