--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.0'
+        
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,11 +17,11 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
-        maven {
-            name "rosjava-github"
-            url "https://github.com/rosjava/rosjava_mvn_repo/raw/master"
-        }
+        jcenter()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
