--- a/brainapp/app/src/main/AndroidManifest.xml
+++ b/brainapp/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
         android:name="android.hardware.camera"
         android:required="true" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -30,8 +32,21 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:theme="@style/PreferencesTheme"
-            android:label="@string/title_activity_settings">
+            android:label="@string/title_activity_settings"
+            android:theme="@style/PreferencesTheme"></activity>
+        <activity
+            android:name=".USBHealthCheckActivity"
+            android:label="@string/title_activity_usbhealth_check"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                android:resource="@xml/device_filter" />
         </activity>
     </application>
 
