--- a/brainapp/app/src/main/AndroidManifest.xml
+++ b/brainapp/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
         android:name="android.hardware.camera"
         android:required="true" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -30,9 +32,13 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:theme="@style/PreferencesTheme"
-            android:label="@string/title_activity_settings">
-        </activity>
+            android:label="@string/title_activity_settings"
+            android:theme="@style/PreferencesTheme" />
+
+        <service
+            android:name=".DriveService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
