--- a/brainapp/app/build.gradle
+++ b/brainapp/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
+    compile project(path: ':usbSerialForAndroid')
 }
